Modify repository methods to use native queries
Signed-off-by: sdimitrov9 <stoyan.dimitrov@limechain.tech>