@@ -5,8 +5,8 @@ package org.hiero.mirror.restjava.service;
 import jakarta.inject.Named;
 import java.math.BigInteger;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.function.Supplier;
 import lombok.RequiredArgsConstructor;
 import org.hiero.mirror.common.domain.hook.Hook;
 import org.hiero.mirror.common.domain.hook.HookStorage;
@@ -49,7 +49,7 @@ final class HookServiceImpl implements HookService {
                     .toList();
 
             if (idsInRange.isEmpty()) {
-                return Collections.emptyList();
+                return List.of();
             }
 
             return hookRepository.findByOwnerIdAndHookIdIn(id.getId(), idsInRange, page);
@@ -61,100 +61,127 @@ final class HookServiceImpl implements HookService {
         final var sort = Sort.by(request.getOrder(), Constants.KEY);
         final var page = PageRequest.of(0, request.getLimit(), sort);
 
-        final var id = entityService.lookup(request.getOwnerId());
         final var keys = request.getKeys();
 
         if (keys.isEmpty()) {
             return hookStorageRepository.findByOwnerIdAndHookIdAndKeyBetween(
-                    id.getId(), request.getHookId(), request.getKeyLowerBound(), request.getKeyUpperBound(), page);
-        } else {
-            final BigInteger lowerBound = new BigInteger(1, request.getKeyLowerBound());
-            final BigInteger upperBound = new BigInteger(1, request.getKeyUpperBound());
-
-            final var idsInRange = keys.stream()
-                    .filter(key -> {
-                        final var keyAsBigInt = new BigInteger(key, 16);
-                        return keyAsBigInt.compareTo(lowerBound) >= 0 && keyAsBigInt.compareTo(upperBound) <= 0;
-                    })
-                    .map(Numeric::hexStringToByteArray)
-                    .toList();
-
-            if (idsInRange.isEmpty()) {
-                return Collections.emptyList();
-            } else {
-                return hookStorageRepository.findByOwnerIdAndHookIdAndKeyIn(
-                        id.getId(), request.getHookId(), idsInRange, page);
-            }
+                    request.getOwnerId().getId(),
+                    request.getHookId(),
+                    request.getKeyLowerBound(),
+                    request.getKeyUpperBound(),
+                    page);
         }
+
+        final var keyBytesList =
+                keys.stream().map(Numeric::hexStringToByteArray).toList();
+
+        final var filteredKeys =
+                filterKeysInRange(keyBytesList, request.getKeyLowerBound(), request.getKeyUpperBound());
+
+        if (filteredKeys.isEmpty()) {
+            return List.of();
+        }
+        return hookStorageRepository.findByOwnerIdAndHookIdAndKeyInAndDeletedIsFalse(
+                request.getOwnerId().getId(), request.getHookId(), filteredKeys, page);
     }
 
     @Override
     public Collection<HookStorage> getHookStorageChange(HookStorageRequest request) {
-
         final var sort = Sort.by(request.getOrder(), Constants.KEY);
         final var page = PageRequest.of(0, request.getLimit(), sort);
 
-        final long ownerId = entityService.lookup(request.getOwnerId()).getId();
+        final long ownerId = request.getOwnerId().getId();
         final long hookId = request.getHookId();
 
         var keyEqualsList =
                 request.getKeys().stream().map(Numeric::hexStringToByteArray).toList();
-
         final byte[] keyLowerBound = request.getKeyLowerBound();
         final byte[] keyUpperBound = request.getKeyUpperBound();
 
-        // Filter keys that are within range
-        if (!keyEqualsList.isEmpty()) {
-            final var lowerBound = new BigInteger(1, keyLowerBound);
-            final var upperBound = new BigInteger(1, keyUpperBound);
+        final var filteredKeys =
+                keyEqualsList.isEmpty() ? List.of() : filterKeysInRange(keyEqualsList, keyLowerBound, keyUpperBound);
 
-            keyEqualsList = keyEqualsList.stream()
-                    .filter(key -> {
-                        final var keyAsBigInt = new BigInteger(1, key);
-                        return keyAsBigInt.compareTo(lowerBound) >= 0 && keyAsBigInt.compareTo(upperBound) <= 0;
-                    })
-                    .toList();
-
-            if (keyEqualsList.isEmpty()) {
-                return List.of();
-            }
-        }
+        if (filteredKeys.isEmpty() && !keyEqualsList.isEmpty()) return List.of();
 
         var timestampEqualsList = request.getTimestamp().stream().toList();
         final long timestampLowerBound = request.getTimestampLowerBound();
         final long timestampUpperBound = request.getTimestampUpperBound();
 
-        // Filter timestamps that are within range
-        if (!timestampEqualsList.isEmpty()) {
-            timestampEqualsList = timestampEqualsList.stream()
-                    .filter(timestamp -> timestamp >= timestampLowerBound && timestamp <= timestampUpperBound)
-                    .toList();
+        final var filteredTimestamps = timestampEqualsList.isEmpty()
+                ? List.<Long>of()
+                : filterTimestampsInRange(timestampEqualsList, timestampLowerBound, timestampUpperBound);
 
-            if (timestampEqualsList.isEmpty()) {
-                return List.of();
-            }
-        }
+        if (filteredTimestamps.isEmpty() && !timestampEqualsList.isEmpty()) return List.of();
+
+        final boolean sortDesc = sort.getOrderFor(Constants.KEY) != null
+                && sort.getOrderFor(Constants.KEY).isDescending();
 
         List<HookStorageChange> results;
 
-        if (!keyEqualsList.isEmpty()) {
-            if (!timestampEqualsList.isEmpty()) {
-                results = hookStorageChangeRepository.findByOwnerIdAndHookIdAndKeyInAndConsensusTimestampIn(
-                        ownerId, hookId, keyEqualsList, timestampEqualsList, page);
-            } else {
-                results = hookStorageChangeRepository.findByOwnerIdAndHookIdAndKeyInAndConsensusTimestampBetween(
-                        ownerId, hookId, keyEqualsList, timestampLowerBound, timestampUpperBound, page);
-            }
+        if (!keyEqualsList.isEmpty() && !timestampEqualsList.isEmpty()) {
+            results = fetchLatestByKeySorted(
+                    sortDesc,
+                    () -> hookStorageChangeRepository.findLatestChangePerKeyForKeyListAndTimestampListOrderByKeyAsc(
+                            ownerId, hookId, keyEqualsList, timestampEqualsList, page),
+                    () -> hookStorageChangeRepository.findLatestChangePerKeyForKeyListAndTimestampListOrderByKeyDesc(
+                            ownerId, hookId, keyEqualsList, timestampEqualsList, page));
+        } else if (!keyEqualsList.isEmpty()) {
+            results = fetchLatestByKeySorted(
+                    sortDesc,
+                    () -> hookStorageChangeRepository.findLatestChangePerKeyInTimestampRangeForKeysOrderByKeyAsc(
+                            ownerId, hookId, keyEqualsList, timestampLowerBound, timestampUpperBound, page),
+                    () -> hookStorageChangeRepository.findLatestChangePerKeyInTimestampRangeForKeysOrderByKeyDesc(
+                            ownerId, hookId, keyEqualsList, timestampLowerBound, timestampUpperBound, page));
+        } else if (!timestampEqualsList.isEmpty()) {
+            results = fetchLatestByKeySorted(
+                    sortDesc,
+                    () -> hookStorageChangeRepository.findLatestChangePerKeyForTimestampListAndKeyRangeOrderByKeyAsc(
+                            ownerId, hookId, keyLowerBound, keyUpperBound, timestampEqualsList, page),
+                    () -> hookStorageChangeRepository.findLatestChangePerKeyForTimestampListAndKeyRangeOrderByKeyDesc(
+                            ownerId, hookId, keyLowerBound, keyUpperBound, timestampEqualsList, page));
         } else {
-            if (!timestampEqualsList.isEmpty()) {
-                results = hookStorageChangeRepository.findByOwnerIdAndHookIdAndKeyBetweenAndConsensusTimestampIn(
-                        ownerId, hookId, keyLowerBound, keyUpperBound, timestampEqualsList, page);
-            } else {
-                results = hookStorageChangeRepository.findByOwnerIdAndHookIdAndKeyBetweenAndConsensusTimestampBetween(
-                        ownerId, hookId, keyLowerBound, keyUpperBound, timestampLowerBound, timestampUpperBound, page);
-            }
+            results = fetchLatestByKeySorted(
+                    sortDesc,
+                    () -> hookStorageChangeRepository.findLatestChangePerKeyInTimestampRangeForKeyRangeOrderByKeyAsc(
+                            ownerId,
+                            hookId,
+                            keyLowerBound,
+                            keyUpperBound,
+                            timestampLowerBound,
+                            timestampUpperBound,
+                            page),
+                    () -> hookStorageChangeRepository.findLatestChangePerKeyInTimestampRangeForKeyRangeOrderByKeyDesc(
+                            ownerId,
+                            hookId,
+                            keyLowerBound,
+                            keyUpperBound,
+                            timestampLowerBound,
+                            timestampUpperBound,
+                            page));
         }
 
         return results.stream().map(c -> new HookStorage().hookStorage(c)).toList();
+    }
+
+    private List<byte[]> filterKeysInRange(List<byte[]> keys, byte[] lower, byte[] upper) {
+        final var lowerBound = new BigInteger(1, lower);
+        final var upperBound = new BigInteger(1, upper);
+        return keys.stream()
+                .filter(k -> {
+                    final var keyAsBigInt = new BigInteger(1, k);
+                    return keyAsBigInt.compareTo(lowerBound) >= 0 && keyAsBigInt.compareTo(upperBound) <= 0;
+                })
+                .toList();
+    }
+
+    private <T extends Comparable<T>> List<T> filterTimestampsInRange(List<T> values, T lower, T upper) {
+        return values.stream()
+                .filter(v -> v.compareTo(lower) >= 0 && v.compareTo(upper) <= 0)
+                .toList();
+    }
+
+    private <T> List<T> fetchLatestByKeySorted(
+            boolean descending, Supplier<List<T>> ascSupplier, Supplier<List<T>> descSupplier) {
+        return descending ? descSupplier.get() : ascSupplier.get();
     }
 }
